--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         </section>
 
-        <section id="announcement" class="events background-grey">
+        <section id="announcement" class="events background-grey fadeInUp wow">
             <div class="wrapper">
                 <h2 class="heading">Мероприятия 2022 год</h2>
                 <div class="events-box">
@@ -113,7 +113,7 @@
             </div>
         </section>
 
-        <section id="way" class="info-section background-lightgrey">
+        <section id="way" class="info-section background-lightgrey fadeInUp wow">
             <div class="wrapper">
                 <h2 class="heading">В начале пути</h2>
                 <p>Жизнь разворачивала события своим чередом – детство в маленьком Южноуральске, куда меня вывезли из Челябинска в возрасте двух лет с хроническим бронхитом. В институт снова вернулась в большой город. Начало трудовой и семейной жизни совпали,
