--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         </section>
 
-        <section id="announcement" class="events background-grey fadeInUp wow">
+        <section id="announcement" class="events background-grey">
             <div class="wrapper">
                 <h2 class="heading">Мероприятия 2022 год</h2>
                 <div class="events-box">
@@ -113,8 +113,8 @@
             </div>
         </section>
 
-        <section id="way" class="info-section background-lightgrey fadeInUp wow">
-            <div class="wrapper">
+        <section id="way" class="info-section background-lightgrey">
+            <div class="wrapper fadeInUp wow">
                 <h2 class="heading">В начале пути</h2>
                 <p>Жизнь разворачивала события своим чередом – детство в маленьком Южноуральске, куда меня вывезли из Челябинска в возрасте двух лет с хроническим бронхитом. В институт снова вернулась в большой город. Начало трудовой и семейной жизни совпали,
                     и к 27 годам радость жизни истончилась окончательно вместе со здоровьем.</p><br>
@@ -128,7 +128,7 @@
         </section>
 
         <section class="info-section background-grey">
-            <div class="wrapper">
+            <div class="wrapper fadeInUp wow">
                 <h2 class="heading">Кто ищет - тот находит</h2>
                 <p class="info-section__text">В середине 2005 года один знакомый выслал мне обсуждение с форума <a href="https://realyoga.ru">сайта</a>. Это был поворотный момент в моей практике. </p>
                 <p class="info-section__text">Ноябрь 2005 года – мой первый семинар в Подмосковье. Помню хорошо себя до этой поездки – отсутствие радости и сил, напряженность просыпались раньше меня каждое утро, а после семинара – словно дышать стала иначе. С собой ещё долго на коврике
@@ -140,7 +140,7 @@
         </section>
 
         <section class="info-section2 background-lightgrey">
-            <div class="wrapper">
+            <div class="wrapper fadeInUp wow">
                 <h2 class="heading">Почему "наша" йога работает?</h2>
                 <p class="info-section2__text">Потому что практика асан выполняется в особом состоянии глубочайшего расслабления.</p>
                 <p class="info-section2__text"> Именно это особое исцеляющее расслабление со временем возвращает здоровье и налаживает жизнь. Настроение улучшается, естественным состоянием человека становится простая радость жизни.</p>
@@ -150,7 +150,7 @@
         </section>
 
         <section class="info-section3 background-grey">
-            <div class="wrapper">
+            <div class="wrapper fadeInUp wow">
                 <h2 class="heading">Магистратура</h2>
                 <p class="info-section3__text">В 2014 году закончила с отличием очную магистратуру УралГУФКа по направлению "Физическая реабилитация". Тема магистерской диссертации "Обоснование применения хатха-йоги в восстановлении здорового ночного сна у лиц с различным уровнем двигательной
                     активности". В 36 лет отметила, не без удовольствия, тот факт, что мои внимание, память и способность к анализу информации приросла в разы. Учиться было легче и радостней, чем на первом высшем в 20 лет.</p>
@@ -158,7 +158,7 @@
         </section>
 
         <section class="info-section4 background-lightgrey">
-            <div class="wrapper">
+            <div class="wrapper fadeInUp wow">
                 <h2 class="heading">Чем живу сейчас</h2>
                 <p class="info-section4__text">Обитаю в Крыму в окрестностях Судака. Хорошо знаю местность, поэтому сама вожу по заповедным тропам Крыма, большей части которых нет в путеводителях. Провожу индивидуальные и групповые занятия, онлайн занятия и консультации в Telegram.</p>
                 <p class="info-section4__text">Здесь в Крыму создались условия для проявления ещё одного моего увлечения с детства – <a href="https://vk.com/clavntea">травничества</a>.</p>
@@ -215,7 +215,7 @@
                     <div class="slider__button swiper-button-prev"></div>
                     <div class="slider__button swiper-button-next"></div>
                 </div>
-                <blockquote class="quote">
+                <blockquote class="quote fadeInUp wow">
                     <p><i>Грамотная практика йоги – тонкая настройка на свою мелодию. Когда ты живёшь в такт своей душе – Вселенная подпевает!</i></p>
 
                 </blockquote>
