--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
             <div class="wrapper">
                 <h2 class="heading">Мероприятия 2022 год</h2>
                 <div class="events-box">
-                    <article class="events-info fadeInUp wow">
+                    <article class="events-info fadeInUp wow" data-wow-delay="0.5s">
                         <a href="http://nebeshavasana.ru/ural">
                             <h3 class="events-info__title">Йога-тур.<br>Урал</h3>
                             <img src="img/Река Серьга.jpg" alt="Река Серьга">
                         </a>
                     </article>
-                    <article class="events-info fadeInUp wow">
+                    <article class="events-info fadeInUp wow" data-wow-delay="0.7s">
                         <a href="https://realyoga.ru/seminars/2022/09-more-i-gory-dagestana">
                             <h3 class="events-info__title">Море и горы<br>Дагестана</h3>
                             <img src="img/Дагестан.png" alt="Дагестан">
@@ -173,7 +173,7 @@
                 <h2 class="heading">Статьи</h2>
                 <div class="slider-article swiper-container">
                     <div class="swiper-wrapper">
-                        <article class="article-info swiper-slide">
+                        <article class="article-info swiper-slide fadeInUp wow" data-wow-delay="0.4s">
                             <a href="http://nebeshavasana.ru/yogareset">
                                 <img src="img/Для статьи 1.jpg" alt="Чайки над Байкалом">
                             </a>
@@ -185,7 +185,7 @@
                                 <p class="article-info__desc">Все мы родом из детства</p>
                             </a>
                         </article>
-                        <article class="article-info swiper-slide">
+                        <article class="article-info swiper-slide fadeInUp wow" data-wow-delay="0.7s">
                             <a href="http://nebeshavasana.ru/ne_dremlet">
                                 <img src="img/Для статьи 2.jpg" alt="">
                             </a>
@@ -197,7 +197,7 @@
                                 <p class="article-info__desc">Для тех, кто не дремлет...</p>
                             </a>
                         </article>
-                        <article class="article-info swiper-slide">
+                        <article class="article-info swiper-slide fadeInUp wow" data-wow-delay="0.9s">
                             <a href="http://nebeshavasana.ru/vnimanie">
                                 <img src="img/Для статьи 3.jpg" alt="">
 
@@ -228,21 +228,21 @@
                 <p class="reviews__desc">Из серии "не могла не написать"</p>
                 <div class="slider-reviews swiper-container">
                     <div class="swiper-wrapper">
-                        <article class="reviews-info swiper-slide">
+                        <article class="reviews-info swiper-slide fadeInRight wow" data-wow-delay="0.4s">
                             <a href="https://vk.com/@realyogacher-kak-my-na-zolotoi-ural-hodili">
                                 <img src="img/Для отзыва 1.jpeg" alt="Золотой Урал">
                                 <h3 class="reviews-info__title">Как мы на "золотой" Урал ходили.<br> Таганай, сентябрь 2019 года</h3>
 
                             </a>
                         </article>
-                        <article class="reviews-info swiper-slide">
+                        <article class="reviews-info swiper-slide fadeInRight wow" data-wow-delay="0.7s">
                             <a href="https://vk.com/@realyogacher-vnutrennee-puteshestvie-v-goru">
                                 <img src="img/Для отзыва 2.jpeg" alt="Кавказ">
                                 <h3 class="reviews-info__title">Внутреннее путешествие в гору.<br> Кавказ, сентябрь 2019 года</h3>
 
                             </a>
                         </article>
-                        <article class="reviews-info swiper-slide">
+                        <article class="reviews-info swiper-slide fadeInRight wow" data-wow-delay="0.9s">
                             <a href="https://vk.com/@realyogacher-vkus-chaya-na-vershine">
                                 <img src="img/Для отзыва 3.jpg" alt="Зимний Крым">
                                 <h3 class="reviews-info__title">Вкус чая на вершине.<br> Крым, январь 2020 года</h3>
