--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/7432addfe6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Merriweather&family=Source+Serif+Pro:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" media="all" href="animated/css/animate.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -12,8 +14,6 @@
     <script>
         new WOW().init();
     </script>
-    <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Merriweather&family=Source+Serif+Pro:wght@600&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico.png" type="image/x-icon">
     <title>Йога / Анастасия Черника</title>
 </head>
@@ -116,53 +116,53 @@
         <section id="way" class="info-section background-lightgrey">
             <div class="wrapper fadeInUp wow">
                 <h2 class="heading">В начале пути</h2>
-                <p>Жизнь разворачивала события своим чередом – детство в маленьком Южноуральске, куда меня вывезли из Челябинска в возрасте двух лет с хроническим бронхитом. В институт снова вернулась в большой город. Начало трудовой и семейной жизни совпали,
+                <p class="info-section__text">Жизнь разворачивала события своим чередом – детство в маленьком Южноуральске, куда меня вывезли из Челябинска в возрасте двух лет с хроническим бронхитом. В институт снова вернулась в большой город. Начало трудовой и семейной жизни совпали,
                     и к 27 годам радость жизни истончилась окончательно вместе со здоровьем.</p><br>
-                <p>Задалась вопросом: когда в последний раз ощущала себя в целостности и лёгкости? И вспомнился подростковый опыт – занятия йогой в 15 лет по книге «Йога для начинающих» Йогешвара. Вернулась к занятиям по ней, но накопленное за последние
+                <p class="info-section__text">Задалась вопросом: когда в последний раз ощущала себя в целостности и лёгкости? И вспомнился подростковый опыт – занятия йогой в 15 лет по книге «Йога для начинающих» Йогешвара. Вернулась к занятиям по ней, но накопленное за последние
                     годы напряжение не отпускало, продолжало «фонить», проявляя себя по телу блуждающим дискомфортом, переходящим в боль на фоне бессонницы. Пришлось пройти полностью все обследования, врачи развели руками, я для них на тот момент ещё
                     не представляла интереса. Сейчас мне понятно, насколько моя система в те годы была на грани срыва.</p><br>
-                <p>Следующий шаг разборки с состоянием – поиск информации и опытного наставника. Продолжая занятия дома, в начале 2005 года посетила пару занятий в группе. В то время в Челябинске выбор был минимален, всё, что мне попалось тогда, было «хорошей
+                <p class="info-section__text">Следующий шаг разборки с состоянием – поиск информации и опытного наставника. Продолжая занятия дома, в начале 2005 года посетила пару занятий в группе. В то время в Челябинске выбор был минимален, всё, что мне попалось тогда, было «хорошей
                     физкультурой». Внешне очень похоже на йогу – те же асаны, пранаямы, а по сути фитнес: хорошо попотел, поднапрягся, значит хорошо позанимался. Мне, моему организму нужно было нечто другое, и я это уже чувствовала. Напряжение можно растворить
                     лишь противоположным – расслаблением.</p>
             </div>
         </section>
 
-        <section class="info-section background-grey">
+        <section class="info-section2 background-grey">
             <div class="wrapper fadeInUp wow">
                 <h2 class="heading">Кто ищет - тот находит</h2>
-                <p class="info-section__text">В середине 2005 года один знакомый выслал мне обсуждение с форума <a href="https://realyoga.ru">сайта</a>. Это был поворотный момент в моей практике. </p>
-                <p class="info-section__text">Ноябрь 2005 года – мой первый семинар в Подмосковье. Помню хорошо себя до этой поездки – отсутствие радости и сил, напряженность просыпались раньше меня каждое утро, а после семинара – словно дышать стала иначе. С собой ещё долго на коврике
+                <p class="info-section2__text">В середине 2005 года один знакомый выслал мне обсуждение с форума <a href="https://realyoga.ru">сайта</a>. Это был поворотный момент в моей практике. </p>
+                <p class="info-section2__text">Ноябрь 2005 года – мой первый семинар в Подмосковье. Помню хорошо себя до этой поездки – отсутствие радости и сил, напряженность просыпались раньше меня каждое утро, а после семинара – словно дышать стала иначе. С собой ещё долго на коврике
                     пришлось вести восстановительные беседы, но главное – на семинаре был задан грамотный вектор дальнейшей домашней практике. И дальше так и было: занимаюсь дома, не торопясь, как получается, на удалённом режиме от наставника. И раз в
                     год, в полгода еду на семинар, неважно куда: Томск, Омск или Тюмень. Позже появилось естественное желание поделиться своим опытом. Виктор Бойко вполне серьёзен, когда говорит о том, что "все преподаватели школы в прошлом мои пациенты".
                     Так и есть. </p>
-                <p class="info-section__text">Спустя три года организовываю первый семинар Виктора Бойко в Челябинске, на сегодня их количество пошло на второй десяток.</p>
+                <p class="info-section2__text">Спустя три года организовываю первый семинар Виктора Бойко в Челябинске, на сегодня их количество пошло на второй десяток.</p>
             </div>
         </section>
 
-        <section class="info-section2 background-lightgrey">
+        <section class="info-section3 background-lightgrey">
             <div class="wrapper fadeInUp wow">
                 <h2 class="heading">Почему "наша" йога работает?</h2>
-                <p class="info-section2__text">Потому что практика асан выполняется в особом состоянии глубочайшего расслабления.</p>
-                <p class="info-section2__text"> Именно это особое исцеляющее расслабление со временем возвращает здоровье и налаживает жизнь. Настроение улучшается, естественным состоянием человека становится простая радость жизни.</p>
-                <p class="info-section2__text">И тогда работа в радость, и активность – счастье, и силы есть!
+                <p class="info-section3__text">Потому что практика асан выполняется в особом состоянии глубочайшего расслабления.</p>
+                <p class="info-section3__text"> Именно это особое исцеляющее расслабление со временем возвращает здоровье и налаживает жизнь. Настроение улучшается, естественным состоянием человека становится простая радость жизни.</p>
+                <p class="info-section3__text">И тогда работа в радость, и активность – счастье, и силы есть!
                 </p>
             </div>
         </section>
 
-        <section class="info-section3 background-grey">
+        <section class="info-section4 background-grey">
             <div class="wrapper fadeInUp wow">
                 <h2 class="heading">Магистратура</h2>
-                <p class="info-section3__text">В 2014 году закончила с отличием очную магистратуру УралГУФКа по направлению "Физическая реабилитация". Тема магистерской диссертации "Обоснование применения хатха-йоги в восстановлении здорового ночного сна у лиц с различным уровнем двигательной
+                <p class="info-section4__text">В 2014 году закончила с отличием очную магистратуру УралГУФКа по направлению "Физическая реабилитация". Тема магистерской диссертации "Обоснование применения хатха-йоги в восстановлении здорового ночного сна у лиц с различным уровнем двигательной
                     активности". В 36 лет отметила, не без удовольствия, тот факт, что мои внимание, память и способность к анализу информации приросла в разы. Учиться было легче и радостней, чем на первом высшем в 20 лет.</p>
             </div>
         </section>
 
-        <section class="info-section4 background-lightgrey">
+        <section class="info-section5 background-lightgrey">
             <div class="wrapper fadeInUp wow">
                 <h2 class="heading">Чем живу сейчас</h2>
-                <p class="info-section4__text">Обитаю в Крыму в окрестностях Судака. Хорошо знаю местность, поэтому сама вожу по заповедным тропам Крыма, большей части которых нет в путеводителях. Провожу индивидуальные и групповые занятия, онлайн занятия и консультации в Telegram.</p>
-                <p class="info-section4__text">Здесь в Крыму создались условия для проявления ещё одного моего увлечения с детства – <a href="https://vk.com/clavntea">травничества</a>.</p>
-                <p class="info-section4__text">С 2015 года регулярно провожу выездные многодневные семинары/путешествия по красивейшим местам: Крым, Дагестан, Урал, Кавказ, Абхазия, Байкал и Алтай. Меня вдохновляет этот опыт. Живая природа и наша практика совместно, даже в течение
+                <p class="info-section5__text">Обитаю в Крыму в окрестностях Судака. Хорошо знаю местность, поэтому сама вожу по заповедным тропам Крыма, большей части которых нет в путеводителях. Провожу индивидуальные и групповые занятия, онлайн занятия и консультации в Telegram.</p>
+                <p class="info-section5__text">Здесь в Крыму создались условия для проявления ещё одного моего увлечения с детства – <a href="https://vk.com/clavntea">травничества</a>.</p>
+                <p class="info-section5__text">С 2015 года регулярно провожу выездные многодневные семинары/путешествия по красивейшим местам: Крым, Дагестан, Урал, Кавказ, Абхазия, Байкал и Алтай. Меня вдохновляет этот опыт. Живая природа и наша практика совместно, даже в течение
                     недели, творят простые чудеса – расправляются плечи, искренние настоящие улыбки и глаза начинают светиться естественной радостью.</p>
                 <p>Возможен вариант организации индивидуального тура. Проживание в Судаке или его окрестностях (отдых в деревне), занятия йогой и экскурсии по славным местам Крыма.</p>
             </div>
@@ -177,10 +177,6 @@
                             <a href="http://nebeshavasana.ru/yogareset">
                                 <img src="img/Для статьи 1.jpg" alt="Чайки над Байкалом">
                             </a>
-                            <div class="heart-counter">
-                                <button class="heart" type="button"></button>
-                                <span class="likes-number">0</span>
-                            </div>
                             <a href="http://nebeshavasana.ru/ne_dremlet">
                                 <p class="article-info__desc">Все мы родом из детства</p>
                             </a>
@@ -189,10 +185,6 @@
                             <a href="http://nebeshavasana.ru/ne_dremlet">
                                 <img src="img/Для статьи 2.jpg" alt="">
                             </a>
-                            <div class="heart-counter">
-                                <button class="heart" type="button"></button>
-                                <span class="likes-number">0</span>
-                            </div>
                             <a href="http://nebeshavasana.ru/ne_dremlet">
                                 <p class="article-info__desc">Для тех, кто не дремлет...</p>
                             </a>
@@ -202,10 +194,6 @@
                                 <img src="img/Для статьи 3.jpg" alt="">
 
                             </a>
-                            <div class="heart-counter">
-                                <button class="heart" type="button"></button>
-                                <span class="likes-number">0</span>
-                            </div>
                             <a href="http://nebeshavasana.ru/ne_dremlet">
                                 <p class="article-info__desc">Работа с вниманием в практике йоги</p>
                             </a>
